# Basic-learning-of-C-

./: CMakeLists.txt
00_Test/: App  CMakeLists.txt  main.cpp
00_Test/include/: 1.py  yolo.hpp
01_基础和流程控制/: 01_hello_world.cpp  02_变量和cin.cpp  03_数据类型.cpp  03_运算符.cpp  04_if逻辑判断.cpp  04_if随机数.cpp  04_if随机数plus.cpp  05_枚举.cpp  06_while循环.cpp  06_while循环乘法表.cpp  07_for循环.cpp  07_for循环乘法表.cpp  08_发工资.cpp  my_tools.h
02_数组和指针/: 01_数组.cpp  02_十次机会猜数字.cpp  03_多维数组.cpp  04_数组的遍历.cpp  05_数组练习题.cpp  06_指针基础.cpp  07_野指针和空指针.cpp  08_指针运算.cpp  09_内存分配_new和delete.cpp  10_常量指针.cpp  11_结构体.cpp  12_结构体数组.cpp  13_结构体指针.cpp
03_函数和类/: 01_函数.cpp  02_值的引用.cpp  03_函数参数的传递.cpp  04_函数传入数组.cpp  05_函数返回数组.cpp  06_函数返回指针.cpp  07_static关键字.cpp  08_类和对象.cpp  09_构造函数.cpp  10_初始化列表.cpp  11_析构函数.cpp  12_this指针.cpp  13_this指针链式.cpp  14_只能创建一个对象的类.cpp  15_const关键字.cpp  16_友元关系(好朋友).cpp
04_继承/: 01_继承.cpp  02_父类指针指向子类对象.cpp  03_继承父类带参构造.cpp  04_菱形继承.cpp
05_多态/: 01_重写.cpp  02_虚析构.cpp  03_纯虚函数.cpp
06_文件流/: 01_写入文件.cpp  02_读取文件.cpp  test.txt
07_模版/: 01_函数模版.cpp  02_类模版.cpp
08_通讯录管理系统/: mian.cpp
